Resolves fdo#85524: OSX Crash Impress with videoclip

Change-Id: If222be9574af1078ffba15c07f048503dd8d7e8e